--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -40,7 +40,7 @@ section{
 }
 
 .container button{
-    background-color: #512da8;
+    background-color: #1F2937;
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -156,7 +156,7 @@ section{
 .toggle{
     background-color: #512da8;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
+    background: linear-gradient(to right, #111827, #1F2937);
     color: #fff;
     position: relative;
     left: -100%;
